Fix to make sure main layout takes up entire screen height & change error color to make it visible

--- a/HealthEHub.Client/wwwroot/css/app.css
+++ b/HealthEHub.Client/wwwroot/css/app.css
@@ -1,3 +1,8 @@
+html, body, #app {
+    height: 100%;
+    margin: 0;
+}
+
 .mud-grid-spacing-xs-3 {
     width: 100% !important;
     margin: 0 !important;
@@ -5,7 +10,6 @@
 
 .main-content-container {
     margin-top: calc(var(--mud-appbar-height) - var(--mud-appbar-height)/8 + 2rem);
-    margin-bottom: calc(var(--mud-appbar-height) - var(--mud-appbar-height)/8 + 2rem);
 }
 
 .mud-nav-item {
@@ -24,7 +28,6 @@
 @media (min-width: 600px) {
     .main-content-container {
         margin-top: calc(var(--mud-appbar-height) + 2rem);
-        margin-bottom: calc(var(--mud-appbar-height) + 2rem);
         padding: 0;
     }
 }
